--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
 	
     <meta name="keywords" content="Birthday, Happy">
